added highlight to navbar icons

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                             <i class="bi bi-star-fill"></i><span class="navbar-items-text">Skills</span>
                         </a>
                     </li>
-                    <li class="navbar-items">
+                    <li class="navbar-items" style="background-color: #17a282;">
                         <a href="./contact.html">
                             <i class="bi bi-telephone-fill"></i><span class="navbar-items-text">Contact</span>
                         </a>
