--- a/skills.html
+++ b/skills.html
@@ -24,7 +24,7 @@
                             <i class="bi bi-chat-square-text-fill"></i><span class="navbar-items-text">About Me</span>
                         </a>
                     </li>
-                    <li class="navbar-items">
+                    <li class="navbar-items" style="background-color: #17a282;">
                         <a href="./skills.html">
                             <i class="bi bi-star-fill"></i><span class="navbar-items-text">Skills</span>
                         </a>
