--- a/aboutme.html
+++ b/aboutme.html
@@ -15,11 +15,11 @@
             <div class="navbar">
                 <ul>
                     <li class="navbar-items">
-                        <a href="./index.html">
+                        <a href="./index.html" class="active">
                             <i class="bi bi-house-door-fill"></i><span class="navbar-items-text">Home</span>
                         </a>
                     </li>
-                    <li class="navbar-items">
+                    <li class="navbar-items" style="background-color: #17a282;">
                         <a href="./aboutme.html">
                             <i class="bi bi-chat-square-text-fill"></i><span class="navbar-items-text">More Info</span>
                         </a>
