--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="navbar">
                 <ul>
-                    <li class="navbar-items">
+                    <li class="navbar-items" style="background-color: #17a282;">
                         <a href="./index.html">
                             <i class="bi bi-house-door-fill"></i><span class="navbar-items-text">Home</span>
                         </a>
