feat:added project page

--- a/skills.html
+++ b/skills.html
@@ -42,26 +42,32 @@
                     <div class="skill-cell">
                         <h4>C/C++ Programming</h4>
                         <p>I am good in C/C++ programming skills.</p>
+                        <progress class="progressBar" value="80" max="100"></progress>
                     </div>
                     <div class="skill-cell">
                         <h4>Java & OOPS</h4>
-                        <p>I am good in Java programming and OOPS concepts.</p>
+                        <p style="margin: auto;">I am good in Java programming and OOPS concepts.</p>
+                        <progress class="progressBar" value="90" max="100"></progress>
                     </div>
                     <div class="skill-cell">
-                        <h4>Deep Learning Concepts</h4>
-                        <p>I have knowledge in deep learning concepts.</p>
+                        <h4>Deep Learning</h4>
+                        <p style="margin: auto;">I have knowledge in deep learning concepts.</p>
+                        <progress class="progressBar" value="50" max="100"></progress>
                     </div>
                     <div class="skill-cell">
                         <h4>Good Communication</h4>
                         <p>I have good communication skills.</p>
+                        <progress class="progressBar" value="80" max="100"></progress>
                     </div>
                     <div class="skill-cell">
                         <h4>Good Presentation</h4>
                         <p>I have good presentation skills.</p>
+                        <progress class="progressBar" value="70" max="100"></progress>
                     </div>
                     <div class="skill-cell">
                         <h4>Team Player</h4>
                         <p>I have good teamworking skills.</p>
+                        <progress class="progressBar" value="85" max="100"></progress>
                     </div>
                 </div>
             </div>
