--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/aboutme.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Jitty</title>
+    <title>About Me</title>
 </head>
 <body>
     <div class="main-container">
@@ -27,6 +27,11 @@
                     <li class="navbar-items">
                         <a href="./skills.html">
                             <i class="bi bi-star-fill"></i><span class="navbar-items-text">Skills</span>
+                        </a>
+                    </li>
+                    <li class="navbar-items">
+                        <a href="./project.html">
+                            <i class="bi bi-card-checklist"></i><span class="navbar-items-text">Projects</span>
                         </a>
                     </li>
                     <li class="navbar-items">
