--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/contact.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Jitty</title>
+    <title>Contact</title>
 </head>
 <body>
     <div class="main-container">
@@ -29,6 +29,11 @@
                             <i class="bi bi-star-fill"></i><span class="navbar-items-text">Skills</span>
                         </a>
                     </li>
+                    <li class="navbar-items">
+                        <a href="./project.html">
+                            <i class="bi bi-card-checklist"></i><span class="navbar-items-text">Projects</span>
+                        </a>
+                    </li>
                     <li class="navbar-items" style="background-color: #17a282;">
                         <a href="./contact.html">
                             <i class="bi bi-telephone-fill"></i><span class="navbar-items-text">Contact</span>
@@ -40,10 +45,15 @@
                 <div class="contact-heading">Contact</div>
                 <div class="contact">
                     <div class="mail">
-                        <i class="bi bi-envelope-open-fill"></i><span> jittytresa@gmail.com</span>
+                        <i class="bi bi-envelope-open-fill fa-5x"></i><span>      jittytresa@gmail.com</span>
                     </div>
                     <div class="phone">
-                        <i class="bi bi-telephone-inbound"></i><span>  8590332922</span>
+                        <i class="bi bi-telephone-inbound"></i><span>      8590332922</span>
+                    </div>
+                    <div class="address">
+                        <i class="bi bi-house-heart-fill"></i><span>      Palathra House,</span>
+                        <p>Vazhappally P.O.,</p>
+                        <p>Changanacherry</p>
                     </div>
                 </div>
 
