--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Jitty</title>
+    <title>Resume-Jitty</title>
 </head>
 <body>
     <div class="main-container">
@@ -31,7 +31,7 @@
                     </li>
                     <li class="navbar-items">
                         <a href="./project.html">
-                            <i class="bi bi-house-door-fill"></i><span class="navbar-items-text">Home</span>
+                            <i class="bi bi-card-checklist"></i><span class="navbar-items-text">Projects</span>
                         </a>
                     </li>
                     <li class="navbar-items">
