--- a/skills.html
+++ b/skills.html
@@ -30,6 +30,11 @@
                         </a>
                     </li>
                     <li class="navbar-items">
+                        <a href="./project.html">
+                            <i class="bi bi-card-checklist"></i><span class="navbar-items-text">Projects</span>
+                        </a>
+                    </li>
+                    <li class="navbar-items">
                         <a href="./contact.html">
                             <i class="bi bi-telephone-fill"></i><span class="navbar-items-text">Contact</span>
                         </a>
