--- a/tourism.html
+++ b/tourism.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./css/project.css">
+    <link rel="stylesheet" href="./css/projectpage.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/main.css">
+    <title>Guardian Alert</title>
 </head>
 <body>
     <div class="main-container">
@@ -21,7 +21,7 @@
                     </li>
                     <li class="navbar-items">
                         <a href="./aboutme.html">
-                            <i class="bi bi-chat-square-text-fill"></i><span class="navbar-items-text">About Me</span>
+                            <i class="bi bi-chat-square-text-fill"></i><span class="navbar-items-text">More Info</span>
                         </a>
                     </li>
                     <li class="navbar-items">
@@ -29,7 +29,7 @@
                             <i class="bi bi-star-fill"></i><span class="navbar-items-text">Skills</span>
                         </a>
                     </li>
-                    <li class="navbar-items" style="background-color: #17a282;">
+                    <li class="navbar-items" style="background-color: #17a282;"">
                         <a href="./project.html">
                             <i class="bi bi-card-checklist"></i><span class="navbar-items-text">Projects</span>
                         </a>
@@ -41,33 +41,18 @@
                     </li>
                 </ul>
             </div>
-            <div class="project-container">
-                <h3>Projects</h3>
-                <div class="projects">
-                    <a class="project-cell" href="./guardianalert.html">
-                            <div class="img-wrapper">
-                                <img src="./images/Deep-Learning.jpg" alt="Deep Learning">
-                           </div>
-                           <div class="project-name-wrapper">
-                                <h4>Guardian Alert</h4>
-                           </div>
-                    </a>
-                    <a class="project-cell" href="./tourism.html">
-                        <div class="img-wrapper">
-                            <img src="./images/tourism.jpg" alt="Deep Learning">
-                       </div>
-                       <div class="project-name-wrapper">
-                            <h4>Tourism Project</h4>
-                       </div>
-                    </a>
-                    <a class="project-cell" href="./easew.html">
-                        <div class="img-wrapper">
-                            <img src="./images/sewing.jpg" alt="Deep Learning">
-                       </div>
-                       <div class="project-name-wrapper">
-                            <h4>Easew</h4>
-                       </div>
-                    </a>
+            <div class="project-desc-container">
+                <div class="project-desc-tile">
+                    <div class="project-desc">
+                        <div class="project-title">
+                            <h3>Tourism Project</h3>
+                        </div>
+                        <div class="project-details">
+                            <p>Kerala Tourism Project - developed a front-end tourism website using html, css and javascript. Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                                Iste quia eius possimus quidem, minus necessitatibus sit tenetur aperiam. Magni iusto praesentium expedita nostrum a consequatur mollitia deleniti quos quam ea? 
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati enim earum saepe quae itaque, a voluptas dolor tempore fugit explicabo rerum eius asperiores non quia, placeat, iusto rem omnis ex.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
